fixed contact-snippet overflow

--- a/style.css
+++ b/style.css
@@ -17,12 +17,14 @@ figure,
 blockquote,
 dl,
 dd {
+  
   margin: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
 ol[role="list"] {
+ 
   list-style: none;
 }
 
@@ -33,6 +35,7 @@ html:focus-within {
 
 /* Set core body defaults */
 body {
+ 
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
@@ -366,28 +369,30 @@ text-align: center;
 }
 
 .contact-snippet {
+ 
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   text-align: center;
-  /* add image background */
+
+  flex-shrink: 1;
+  
+ margin: 0 auto;
+ width: 100%;
+  max-width: 2000px;
+ 
+
 }
 
 .contact-snippet ul {
-  background-color: #6e9bc57a;
-  padding: 0.5rem;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  
+overflow-wrap: break-word;
+  padding-inline-start: 0px;
+  background-color:  #c0dffc;
 }
 
 .contact-snippet ul li {
 
-  font-size: 2.5rem;
-  text-align: center;
   list-style-type: none;
 }
 
@@ -472,6 +477,12 @@ list-style-type: none;
       display: block;
       cursor: pointer;
   }
+
+  .footer ul {
+    flex-direction: column;
+  }
+
+  
 
 }
 
